//
//  Constants.swift
//  SinghWeShop
//
//  Created by Yeshu Singh on 4/9/23.
//

import Foundation

enum Constants {
  enum Assets {
    public static let backgroundColor = "BackgroundColor"
    public static let textColor = "TextColor"
    public static let buttonFilledTextColor = "ButtonFilledTextColor"
    public static let buttonFilledBackgroundColor = "ButtonFilledBackgroundColor"
    public static let listBackgroundColor = "ListBackgroundColor"
    public static let iconPicture = "IconPicture"
  }

  enum General {
    public static let cornerRadius = 8.0
    public static let strokeBorderWidth = 3.0
    public static let iconPictureSize = 80.0
    public static let roundButtonSize = 40.0
    public static let appTitle = "WeShop"
    public static let shadowRadius = 5.0
  }

  enum ImageLiteral {
    public static let infoCircle = "info.circle"
    public static let figureFishing = "figure.fishing"
    public static let xmark = "xmark"
    public static let photoArtframe = "photo.artframe"
  }
}
