...
  var body: some View {
    ScrollView(showsIndicators: false) {
      ZStack(alignment: .top) {
        VStack(spacing: 5.0) {
          AppPicTitleView()

          Text("This is where you come to do all your shopping.")
            .font(.subheadline)
            .fontWeight(.thin)
            .kerning(0.5)
            .foregroundColor(Color(Constants.Assets.textColor))
        }
        .padding(.top, verticalSizeClass == .compact ? 0 : 60)
...
