...
        .kerning(4.0)
        .foregroundColor(Color(Constants.Assets.textColor))

        Button {
          isShowingCheckoutAlert = true
        } label: {
          ButtonLabelView(title: "Order Now")
        }
        .padding(.top, 30)
      }
      .navigationTitle("My Cart")
      .navigationBarTitleDisplayMode(.inline)
      .onAppear {
        guard cartStore.cartItems.isEmpty else { return }
        cartStore.loadCartFromJSONFile()
      }
      .alert("Checkout", isPresented: $isShowingCheckoutAlert) {
...
